<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFragment">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/paddingList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ivHeightEdit"
            tools:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/textSize"
                android:textColor="?colorPrimary"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="yyyy-mm-dd"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/textSize"
                android:textColor="?colorPrimary"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/title"/>

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="Mr"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/textSize"
                android:textColor="?colorPrimary"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/first"/>

            <EditText
                android:id="@+id/etFirst"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="Roberto"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/textSize"
                android:textColor="?colorPrimary"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/last"/>

            <EditText
                android:id="@+id/etLast"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="MeDiro"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnCommit"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commit" />

    </LinearLayout>


</ScrollView>